# ProductPulse

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml
app/: Dockerfile  data.json  database.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  utils.py
app/database/: db.py
app/dataset/: data.json  schema.sql
app/models/: Base.py  CategoryModel.py  ProductModel.py  ReviewModel.py  UserModel.py  models.py
app/schemas/: cart.py  category.py  product.py
app/schemas/requests/: CreateUserRequest.py
app/schemas/response/: CategoriesResponse.py
app/services/: ProductService.py
app/util/: password.py
ui/: .dockerignore  Dockerfile  eslint.config.js  package.json  pnpm-lock.yaml
