[project]
name = "product-pulse"
description = ""
authors = [{ name = "rp,hd,gp" }]
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.11,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1"
]
urls = { "Repository" = "https://github.com/TheTechKage/ProductPulse" }

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "fastapi>=0.115.8"
]

[tool.ruff]
line-length = 130
select = ["E", "F", "I"]
fix = true

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"